<resources>
    <string name="app_name">The Movie DB</string>
    <string name="the_movie_db">The Movie DB</string>
    <string name="top_rated_movies">Top rated movies</string>
    <string name="search_button">Search button</string>
    <string name="popular_movies">Popular movies</string>
    <string name="movie_poster">Movie poster</string>
    <string name="genres">Genres</string>
    <string name="no_registered_genres_for_movie">This movie doesn\'t have registered genres</string>
    <string name="production_companies">Production companies</string>
    <string name="no_company_information">Sorry, we don\'t know which company financed this movie</string>
    <string name="company_logo">Company logo</string>
    <string name="what_would_you_like_to_search">What would you like to search?</string>
    <string name="type_a_movie_name">Type a movie name</string>
    <string name="results_for">Results for:</string>
    <string name="please_complete_field">Please enter a text to search</string>
    <string name="sorry_we_didn_t_find_any_movie">Sorry, we didn\'t find any movie</string>
</resources>