<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="org.themoviedb.ui.movies.MoviesViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.movies.MoviesFragment">

            <TextView
                android:id="@+id/text_view_tmdb_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/the_movie_db"
                android:textColor="@color/secondaryTextColor"
                android:textSize="@dimen/text_title_size"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/image_button_search"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="20dp"
                android:background="@drawable/ic_search"
                android:backgroundTint="@color/secondaryTextColor"
                android:contentDescription="@string/search_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_view_top_rated_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/top_rated_movies"
                android:textColor="@color/normalTextColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/text_view_tmdb_title"
                app:layout_constraintTop_toBottomOf="@id/text_view_tmdb_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_top_rated_title"
                app:setList="@{viewModel.topRatedMovies.results}"
                tools:listitem="@layout/item_movie" />

            <TextView
                android:id="@+id/text_view_popular_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/popular_movies"
                android:textColor="@color/normalTextColor"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/text_view_tmdb_title"
                app:layout_constraintTop_toBottomOf="@id/recycler_view_movies" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_popular_movies"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:paddingHorizontal="10dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_view_popular_title"
                app:setList="@{viewModel.popularMovies.results}"
                tools:listitem="@layout/item_movie" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>